--- a/debian/changelog
+++ b/debian/changelog
@@ -11,10 +11,10 @@ icmake (7.00-1) unstable; urgency=low
   * Removed patch-stamp from build-stamp target
   * Added doc/icmbuild.1 and doc/icmstart.1 to dh_installman
   * Added doc/README.icmbuild and doc/icmake.doc to dh_installdocs
-  * Added skeleton files (in etc/icmake) to `install'
+  * Added skeleton files (in usr/share/icmake) to `install'
   * Removed superfluous `conffiles'
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 14 Jan 2007 16:33:53 +0100
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 18 Jan 2007 14:30:04 +0100
 
 icmake (6.30-3) unstable; urgency=low
 
@@ -53,7 +53,7 @@ icmake (6.22-7) unstable; urgency=low
 icmake (6.22-6) unstable; urgency=low
 
   * Added patch:
-  	missing_break.dpatch
+    missing_break.dpatch
     (closes: #266703)
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 19 Aug 2004 14:56:09 +0200
