Preparing version 7.01, administrative changes
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@161 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/CHANGES
+++ b/icmake/CHANGES
@@ -1,3 +1,12 @@
+icmake (7.01)
+
+  * The INSTALL file was updated. So were the scripts bootstrap (now named
+    bootstrap.sh) and unix. Compilation warnings appearing on Mac OS-X were as
+    good as possible removed, some old files and directories 
+    were removed or placed in a directory of their own.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 07 Feb 2007 15:50:33 +0100
+
 icmake (7.00)
 
   * The subdirectory examples is renamed to templates
