Added CYGWIN support to bootstrap.sh and other scripts
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@394 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/CHANGES
+++ b/icmake/CHANGES
@@ -2,6 +2,9 @@ icmake (7.11)
 
   * Initialized dead[0] in comp/icm-comp.c
 
+    Added #define EXTENSION to def/destinations to allow easy compilation in
+    cygwin environments
+
 icmake (7.10)
 
   * Removed Superfluous #defines from icm.h
