Various changes, see CHANGES. Towards version 7.11.1
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@655 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/CHANGES
+++ b/icmake/CHANGES
@@ -1,3 +1,12 @@
+icmake (7.11.1)
+
+  * Introduced a three-digit version number: major, minor and subreleases.
+
+  * Updated icmbuild sources to 2008.
+
+  * The Gnu g++ flags for the upcoming c++0x standard are now mentioned in
+    icmconf. 
+
 icmake (7.11)
 
   * Fixed missing dead[0] initialization in comp/icm-comp.c
