--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.11.1-1) unstable; urgency=low
+
+  * New upstream release (ISN)
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Aug 2008 21:04:33 +0200
+
 icmake (7.11-2) unstable; urgency=low
 
   * Updated to standards 3.8.0, repaired incorrectly formatted copyright 
