--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 icmake (7.11.1-1) unstable; urgency=low
 
-  * New upstream release (ISN)
+  * New upstream release
 
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Aug 2008 21:04:33 +0200
 
