--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ icmake (7.11.1-1) unstable; urgency=low
 
   * New upstream release
 
+  [ George Danchev ]
+  * Drop all patches, they have been applied upstream
+  * Drop dpatch from build-dependencies
+
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Aug 2008 21:04:33 +0200
 
 icmake (7.11-2) unstable; urgency=low
