--- a/icmake/doc/icmstart.1
+++ b/icmake/doc/icmstart.1
@@ -1,4 +1,6 @@
-.TH "icmstart" "1" "2006" "icmake\&.7\&.00\&.tar\&.gz" "starts icmbuild program maintenance"
+include(release\&.yo)
+.PP 
+.TH "icmstart" "1" "_CurYrs_" "icmake\&._CurVers_\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
