--- a/icmake/doc/icmbuild.1
+++ b/icmake/doc/icmbuild.1
@@ -1,4 +1,6 @@
-.TH "icmbuild" "1" "2006" "icmake\&.7\&.00\&.tar\&.gz" "A generic program maintenance script"
+include(release\&.yo)
+.PP 
+.TH "icmbuild" "1" "_CurYrs_" "icmake\&._CurVers_\&.tar\&.gz" "A generic program maintenance script"
 
 .PP 
 .SH "NAME"
