--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,6 +1,4 @@
-include(release\&.yo)
-.PP 
-.TH "icmake" "1" "_CurYrs_" "icmake\&._CurVers_\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992-2009" "icmake\&.7\&.12\&.1\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
@@ -1071,7 +1069,7 @@ The mentioned paths are sugestive only and may be installation dependent:
 .SH "EXAMPLES"
 
 .PP 
-The distribution (usually in \fI/usr/share/doc/icmake\fP contains a
+The distribution (usually in \fI/usr/share/doc/icmake\fP) contains a
 directory \fIexamples\fP containing various examples of \fBicmake\fP script\&. Note in
 particular the \fIexamples/icmbuild\fP subdirectory containing a general script
 for \fBC++\fP and \fBC\fP program maintenance\&.
@@ -1079,19 +1077,13 @@ for \fBC++\fP and \fBC\fP program maintenance\&.
 .SH "SEE ALSO"
 \fBicmbuild\fP(1), \fBicmstart\fP(1), \fBmake\fP(1)
 .PP 
-.SH "LICENSE"
-This  is free software, distributed under the terms of the `GNU General
-Public License\&'\&. Copyright remains with the author\&.
-.PP 
-.SH "ORGANIZATION"
-Computing Center, University of Groningen\&.
-.PP 
 .SH "BUGS"
-
+None reported
 .PP 
-Please report bugs to the author:
+.SH "COPYRIGHT"
+This is free software, distributed under the terms of the 
+GNU General Public License (GPL)\&.
 .PP 
 .SH "AUTHOR"
-
+Frank B\&. Brokken (\fBf\&.b\&.brokken@rug\&.nl\fP)\&.
 .PP 
-Frank B\&. Brokken (f\&.b\&.brokken@rug\&.nl)\&.
