--- a/icmake/doc/icmbuild.1
+++ b/icmake/doc/icmbuild.1
@@ -1,6 +1,4 @@
-include(release\&.yo)
-.PP 
-.TH "icmbuild" "1" "_CurYrs_" "icmake\&._CurVers_\&.tar\&.gz" "A generic program maintenance script"
+.TH "icmbuild" "1" "1992-2009" "icmake\&.7\&.12\&.1\&.tar\&.gz" "A generic program maintenance script"
 
 .PP 
 .SH "NAME"
@@ -234,16 +232,13 @@ program, using the library \fIlibbobcat1\fP as an additional library:
 .SH "SEE ALSO"
 \fBicmake\fP(1), \fBicmstart\fP(1)
 .PP 
-.SH "LICENSE"
-This  is free software, distributed under the terms of the `GNU General
-Public License\&'\&. Copyright remains with the author\&.
-.PP 
-.SH "ORGANIZATION"
-Computing Center, University of Groningen\&.
-.PP 
 .SH "BUGS"
-Please report bugs to the author:
+None reported
+.PP 
+.SH "COPYRIGHT"
+This is free software, distributed under the terms of the 
+GNU General Public License (GPL)\&.
 .PP 
 .SH "AUTHOR"
-
-    Frank B\&. Brokken (f\&.b\&.brokken@rug\&.nl)\&.
+Frank B\&. Brokken (\fBf\&.b\&.brokken@rug\&.nl\fP)\&.
+.PP 
