--- a/icmake/doc/icmstart.1
+++ b/icmake/doc/icmstart.1
@@ -1,6 +1,4 @@
-include(release\&.yo)
-.PP 
-.TH "icmstart" "1" "_CurYrs_" "icmake\&._CurVers_\&.tar\&.gz" "starts icmbuild program maintenance"
+.TH "icmstart" "1" "1992-2009" "icmake\&.7\&.12\&.1\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
@@ -13,22 +11,23 @@ icmstart \- A startup script for icmbuild program maintenance
 
 .PP 
 The \fBicmstart\fP script is a generic script that can be used to start program
-maintenance using \fBicmake\fP(1) and \fBicmbuild\fP(1)\&. \fBIcmstart\fP will create an
-initial directory \fItop-dir\fP and will install the files \fICLASSES\fP and
-\fIicmconf\fP below \fItop-dir\fP\&. If provided, \fIprogram\fP or \fIlibrary\fP may be
-specified, to become the default mode of operation of the \fBicmbuild\fP(1)
-script\&. Skeleton files for the main directory and subdirectories, by default
-listed in the file \fI/usr/share/icmake/icmstart\&.rc\fP, may be installed as well
-(see below at \fBSKELETON FILES\fP)\&.
+maintenance using \fBicmake\fP(1) and \fBicmbuild\fP(1)\&. \fBIcmstart\fP will create
+an initial directory \fItop-dir\fP and will install the files \fICLASSES,
+VERSION\fP and \fIicmconf\fP below \fItop-dir\fP\&. If provided, \fIprogram\fP or
+\fIlibrary\fP may be specified as the default mode of operation of the
+\fBicmbuild\fP(1) script\&. Skeleton files for the main directory and
+subdirectories, by default listed in the file
+\fI/usr/share/icmake/icmstart\&.rc\fP, may be installed as well (see below at
+\fBSKELETON FILES\fP)\&.
 .PP 
-After changing to the top-level directory created by \fBicmstart\fP the \fBicmbuild\fP
-script may be called for program maintenance\&.
+After changing to the top-level directory created by \fBicmstart\fP the
+\fBicmbuild\fP script may be called for program maintenance\&.
 .PP 
 .SH "OPTIONS"
 
 .PP 
-\fBIcmstart\fP may be called with the following options, which (f specified) must
-be the first arguments to \fBicmstart\fP:
+\fBIcmstart\fP may be called with the following options, which (if specified)
+must be the first arguments to \fBicmstart\fP:
 .IP o 
 \fI-d\fP
 .br 
@@ -41,7 +40,8 @@ Do not install skeleton files\&.
 .IP o 
 \fI-r\fP 
 Unconditionally replace existing (skeleton) files\&. If \fI-r\fP is not
-provided \fBicmstart\fP will ask the user to confirm that an existing file must
+provided \fBicmstart\fP will ask the user to confirm that an existing
+file must
 be overwritten\&. If a skeleton specification refers to a directory, the
 full directory and its subdirectories will be replaced\&.
 .IP o 
@@ -54,8 +54,8 @@ which -in turn- may be overruled by the path specified with the \fI-s\fP
 option\&. The skeleton path may be specified as a full file-path or as a
 directory, in which case the skeleton resource file is assumed to be
 \fIicmstart\&.rc\fP (see below at \fBSKELETON FILES\fP)\&.
-Since \fBicmstart\fP uses \fItar\fP to install files, \fItar\fP must be available when
-\fBicmstart\fP should install skeleton files\&.
+Since \fBicmstart\fP uses \fItar\fP to install files, \fItar\fP must be
+available when \fBicmstart\fP should install skeleton files\&.
 .PP 
 .SH "SKELETON FILES"
 
@@ -99,9 +99,21 @@ Installation of a directory does not imply that the file \fICLASSES\fP will
 contain that directory as one of its entries\&. It is the user\&'s responsibility
 to update \fICLASSES\fP, if necessary\&.
 .PP 
-.SH "FILES"
+The file \fIVERSION\fP is used to make available the program\&'s version
+number, release-years and author name(s)\&. The \fIVERSION\fP file contains lines
+comparable to
+.nf 
+    // Change the following #defines at your own digression
 
+#define VERSION "0\&.00\&.0"
+#define YEARS   "2009"
+#define AUTHOR  "Frank B\&. Brokken (f\&.b\&.brokken@rug\&.nl)";
+
+.fi 
+
+and the values defined here will be used in the \fIversion\&.cc\fP skeleton file\&.
 .PP 
+.SH "FILES"
 The mentioned paths are sugestive only and may be installation dependent:
 .IP o 
 \fB/usr/share/icmake/icmconf\fP
@@ -117,19 +129,13 @@ Default skeleton resource file\&.
 .SH "SEE ALSO"
 \fBicmake\fP(1), \fBicmbuild\fP(1), \fBtar\fP(1)
 .PP 
-.SH "LICENSE"
-This  is free software, distributed under the terms of the `GNU General
-Public License\&'\&. Copyright remains with the author\&.
-.PP 
-.SH "ORGANIZATION"
-Computing Center, University of Groningen\&.
-.PP 
 .SH "BUGS"
-
+None reported
 .PP 
-Please report bugs to the author:
+.SH "COPYRIGHT"
+This is free software, distributed under the terms of the 
+GNU General Public License (GPL)\&.
 .PP 
 .SH "AUTHOR"
-
+Frank B\&. Brokken (\fBf\&.b\&.brokken@rug\&.nl\fP)\&.
 .PP 
-Frank B\&. Brokken (f\&.b\&.brokken@rug\&.nl)\&.
