--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.12.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 10 Feb 2009 18:38:47 +0100
+
 icmake (7.11.1-1) unstable; urgency=low
 
   [ Frank B. Brokken ]
