Added INSTALL.im and stdandardizing handling of configuration params
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@959 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/INSTALL.im
+++ b/icmake/INSTALL.im
@@ -23,11 +23,11 @@
 
 // Define EXTENSION as ".exe" when compiling for CYGWIN
 //#define EXTENSION   ".exe"
-#define EXTENSION   ""
 
 #define BINDIR      "/usr/bin"
 #define SKELDIR     "/usr/share/icmake"
-#define MANDIR      "/usr/share/man/man1"
+#define MANDIR      "/usr/share/man"
 #define LIBDIR      "/usr/lib/icmake"
-#define ETCDIR      "/etc/icmake"
+#define CONFDIR     "/etc/icmake"
+
 
